--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,7 +6,7 @@
   font-family: Inter;
   font-size: 24px;
   font-weight: 400;
-  line-height: 28px;
+  line-height: 117%;
   text-align: right;
   min-height: 28px;
   max-width: 29px;
@@ -18,7 +18,7 @@
     height: 20px;
     width: 22px;
     font-size: 18px;
-    line-height: 20px;
+    line-height: 111%;
   }
 }
 
