--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,7 +2,7 @@
   font-family: Inter;
   font-size: 10px;
   font-weight: 400;
-  line-height: 14px;
+  line-height: 140%;
   text-align: left;
   letter-spacing: 1.5px;
   min-height: 14px;
