--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,14 +5,14 @@
   font-family: Inter;
   font-size: 96px;
   font-weight: 900;
-  line-height: 100px;
+  line-height: 104%;
   text-align: center;
   /*border: 1px solid red;*/
 }
 @media screen and (max-width : 768px) {
   .lead__title {
     font-size: calc(40px + (96 - 40) * (100vw - 320px) / (768 - 320));
-    line-height: calc(44px + (100 - 44) * (100vw - 320px) / (768 - 320));
+
     min-height: calc(44px + (200 - 88) * (100vw - 320px) / (768 - 320));
     max-width: calc(288px + (720 - 288) * (100vw - 320px) / (768 - 320));
     margin-bottom: calc(16px + (32 - 16) * (100vw - 320px) / (768 - 320));
@@ -24,7 +24,7 @@
     min-height: 88px;
     max-width: 288px;
     font-size: 40px;
-    line-height: 44px;
+    line-height: 110%;
     margin: 0 0 16px 0;
     min-height: 88px;
     max-width: 288px;
