--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -15,8 +15,8 @@
 
 @media screen and (max-width : 320px) {
   .header__lang-link {
-    height: 20px;
-    width: 22px;
+    min-height: 20px;
+    max-width: 22px;
     font-size: 18px;
     line-height: 111%;
   }
