--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,14 +1,11 @@
 .header__logo {
-  background-image: url(../../../images/header-logo.svg);
-  height: 52px;
-  width: 176px;
-  object-fit: cover;
-  /*border: 1px solid red;*/
+  width: 100%;
+  max-width: 176px;
+  display: block;
 }
 
 @media screen and (max-width : 320px) {
   .header__logo {
-    height: 42px;
-    width: 142px;
+    max-width: 142px;
   }
 }
