--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,9 +1,7 @@
 .header__lang-link {
-  /*border: 1px solid red;*/
   margin: 0;
   color: #FFF;
-  text-decoration: none;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 117%;
@@ -11,7 +9,15 @@
   min-height: 28px;
   max-width: 29px;
   padding: 0;
+
 }
+
+@media screen and (max-width : 768px) {
+  .header__lang-link {
+    font-size: calc(18px + (24 - 18) * (100vw - 320px) / (768 - 320));
+  }
+}
+
 
 @media screen and (max-width : 320px) {
   .header__lang-link {
