--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -6,4 +6,10 @@
   gap: 18px;
   margin: 18px 0 0 0;
   padding: 0;
+ }
+
+@media screen and (max-width : 320px) {
+  .header__lang-links {
+   margin-top: 14px;
+  }
 }
