--- a/pages/index1.css
+++ b/pages/index1.css
@@ -18,7 +18,6 @@
   box-sizing: border-box;
 }
 
-
 .content {
   width: 100%;
   margin: 0;
@@ -30,7 +29,6 @@
 .intro {
   min-height: 429px;
   max-width: 100%;
-  /*border: 1px solid red;*/
   display: flex;
   flex-direction: column;
   align-items:flex-start;
@@ -40,7 +38,6 @@
   }
 @media screen and (max-width: 1280px) {
   .intro {
-    /*padding: 92px 442px 92px 148px;*/
     padding-right: calc(286px + (442 - 286) * (100vw - 1024px) / (1280 - 1024));
     padding-left: calc(48px + (148 - 48) * (100vw - 1024px) / (1280 - 1024));
   }
@@ -48,7 +45,6 @@
 
 @media screen and (max-width: 1024px) {
   .intro {
-    /*padding: 92px 286px 92px 48px;*/
     padding-top: calc(88px + (92 - 88) * (100vw - 768px) / (1024 - 768));
     padding-right: calc(24px + (286 - 24) * (100vw - 768px) / (1024 - 768));
     padding-bottom: calc(88px + (92 - 88) * (100vw - 768px) / (1024 - 768));
@@ -58,7 +54,6 @@
 
 @media screen and (max-width: 768px) {
   .intro {
-    /*padding: 88px 24px 88px 24px;*/
     padding-top: calc(64px + (88 - 64) * (100vw - 320px) / (768 - 320));
     padding-right: calc(16px + (24 - 16) * (100vw - 320px) / (768 - 320));
     padding-bottom: calc(64px + (88 - 64) * (100vw - 320px) / (768 - 320));
@@ -72,58 +67,36 @@
   }
 }
 
-
 .intro__title {
   margin: 0 0 40px 0;
   color: #FFF;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 54px;
   font-weight: 900;
   line-height: 107%;
   text-align: left;
-  min-height: 58px;
   max-width: 690px;
   box-sizing: border-box;
-  /*border: 1px solid red;*/
-
-}
-
-@media screen and (max-width: 1280px) {
-  .intro__title {
-
-}
-}
-@media screen and (max-width: 1024px) {
-  .intro__title {
-    max-width: calc(720px + (690 - 720) * (100vw - 768px) / (1024 - 768));
-
-  }
 }
 
 @media screen and (max-width : 768px) {
   .intro__title {
     font-size: calc(32px + (54 - 32) * (100vw - 320px) / (768 - 320));
-    /*line-height: calc(35px + (58 - 35) * (100vw - 320px) / (768 - 320));*/
-    min-height: calc(58px + (58 - 70) * (100vw - 320px) / (768 - 320));
-    max-width: calc(288px + (720 - 288) * (100vw - 320px) / (768 - 320));
-    height: 58px;
-    width: 720px;
   }
 }
 
-@media screen and (max-width : 320px) {
-  .intro__title {
-    min-height: 70px;
-    max-width: 288px;
-    font-size: 32px;
-    line-height: 109%;
-}
+  @media screen and (max-width : 320px) {
+    .intro__title {
+      max-width: 288px;
+      font-size: 32px;
+      line-height: 109%;
+  }
 }
 
 .intro__text {
   margin: 0 0 33px 0;
   color: #FFF;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 163%;
@@ -144,7 +117,7 @@
 }
 
 .intro__list-item {
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 12px;
   font-weight: 400;
   line-height: 150%;
@@ -153,30 +126,23 @@
   margin: 0;
 }
 
-
 .intro__list-large {
   font-weight: 700;
 }
 
-
 .photo-grid {
   margin: 0;
   display: grid;
-  /*border: 1px solid rgb(9, 255, 0);
-  height: 671px;*/
   max-width: 1280px;
   width: 100%;
   grid-template-columns: repeat(4, minmax(auto, 1fr));
-  /*grid-template-rows: repeat(auto-fill, minmax(213px, 1fr));*/
   gap: 16px;
   box-sizing: border-box;
-
 }
 
 @media screen and (max-width: 1280px) {
   .photo-grid {
      gap: calc(14px + (16 - 14) * (100vw - 1024px) / (1280 - 1024));
-/*padding: 0 48px 0 48px; */
   }
 }
 
@@ -184,20 +150,13 @@
   .photo-grid {
     grid-template-columns: repeat(3, minmax(auto, 1fr));
     gap: calc(16px + (14 - 16) * (100vw - 768px) / (1024 - 768));
-
-    /*padding: 0 48px 0 48px;
-     gap: 14px;*/
   }
 }
 
 @media screen and (max-width : 768px) {
   .photo-grid {
     grid-template-columns: repeat(2, minmax(auto, 1fr));
-    /*gap: 16px;
-    /*height: 1664px;*/
     gap: calc(12px + (16 - 12) * (100vw - 320px) / (768 - 320));
-   /* padding: 0 24px 0 24px;
-     */
   }
 }
 
@@ -217,7 +176,6 @@
 }
 
 .plases {
-  /*min-height: 3392px;*/
   padding: 92px 148px 92px 148px;
   max-width: 1280px;
   width: 100%;
@@ -234,9 +192,6 @@
 
 @media screen and (max-width: 1024px) {
   .plases {
-
-    /*padding: 92px 48px 92px 48px;*/
-
     padding-top: calc(88px + (92 - 88) * (100vw - 768px) / (1024 - 768));
     padding-right: calc(24px + (48 - 24) * (100vw - 768px) / (1024 - 768));
     padding-bottom: calc(90px + (92 - 90) * (100vw - 768px) / (1024 - 768));
@@ -247,7 +202,6 @@
 @media screen and (max-width: 768px) {
   .plases {
 
-     /*padding: 88px 24 90px 24;*/
     padding-top: calc(64px + (88 - 64) * (100vw - 320px) / (768 - 320));
     padding-bottom: calc(66px + (90 - 66) * (100vw - 320px) / (768 - 320));
     padding-right: calc(0px + (24 - 0) * (100vw - 320px) / (768 - 320));
@@ -257,9 +211,8 @@
 
 @media screen and (max-width: 320px) {
   .plases {
-
     padding: 64px 0px 66px 0px;
-}
+  }
 }
 
 
@@ -279,22 +232,20 @@
   }
 }
 @media screen and (max-width : 1024px) {
-.plases__container {
-
-}
+  .plases__container {
+    gap: calc(73px + (80 - 73) * (100vw - 768px) / (1024 - 768));
+  }
 }
 @media screen and (max-width : 768px) {
-.plases__container {
-  gap: 73px;
-}
+  .plases__container {
+    gap: calc(50px + (73 - 50) * (100vw - 320px) / (768 - 320));
+  }
 }
 @media screen and (max-width : 320px) {
   .plases__container {
     gap: 50px;
   }
 }
-
-
 
 .plase {
   list-style-type: none;
@@ -306,14 +257,9 @@
   row-gap: 48px;
   padding: 0;
   margin: 0;
-  /*margin: 80px 0 0 0;*/
   box-sizing: border-box;
-
  }
 
-/*.plase:first-child {
-  margin: 0;
-}*/
 
 @media screen and (max-width: 1280px) {
   .plase {
@@ -327,7 +273,6 @@
     grid-template-columns: minmax(340px, 440px) minmax(min-content, max-content);
     grid-template-rows: repeat(2, minmax(min-content, max-content));
     column-gap: 32px;
-
   }
 }
 
@@ -342,7 +287,7 @@
 @media screen and (max-width: 650px) {
   .plase {
     grid-template-columns: minmax(272px, 602px);
-    gap: 32px;
+    column-gap: 32px;
   }
 }
 
@@ -354,10 +299,8 @@
 }
 
 
-
-
 .plase__title {
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 72px;
   font-weight: 900;
   letter-spacing: normal;
@@ -369,21 +312,14 @@
   max-width: 460px;
   display: flex;
   align-items: flex-end;
-
-
-
 }
 
-@media screen and (max-width: 1280px) {
-  .plase__title {
-
-  }
-}
 @media screen and (max-width : 1024px) {
 .plase__title {
+  font-size: calc(42px + (72 - 42) * (100vw - 768px) / (1024 - 768));
+    }
+  }
 
-}
-}
 @media screen and (max-width : 768px) {
   .plase__title {
     font-size: 42px;
@@ -395,16 +331,13 @@
 .plase__title {
   font-size: 32px;
   padding-left: 16px;
-
+  line-height: 110%;
   }
 }
 
-
-
 .plase__website {
   max-width: 456px;
-  font-family: Inter;
-  /*min-height: 46px;*/
+  font-family: Inter, Arial, sans-serif;
   display: flex;
   flex-direction: column;
   align-items:flex-start;
@@ -418,20 +351,16 @@
   }
 }
 
-
 .place__url-heading {
   color: #FFF;
   margin: 0 0 12px 0;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 12px;
   font-weight: 400;
   line-height: 166%;
   text-align: left;
   letter-spacing: 2px;
 }
-
-
-
 
 @media screen and (max-width : 768px) {
   .place__url-heading {
@@ -444,15 +373,20 @@
   color: #FFF;
   min-height: 22px;
   max-width: 456px;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 122%;
   text-align: left;
- }
+}
+
+.place__link:hover {
+  opacity: 0.8;
+  transition: 1s;
+}
+
 
 .plase__image {
-  /*border: 1px solid red;*/
   height: 100%;
   width: 100%;
   object-fit:contain;
@@ -484,30 +418,29 @@
 
 
 .place__paragraph {
-  /*margin: 0 0 26px 0;*/
   color: #FFF;
   width: 100%;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 18px;
   font-weight: 400;
-  /*line-height: 29px;*/
   line-height: 163%;
   text-align: left;
   margin: 0;
-
 }
+
+@media screen and (max-width : 1024px) {
+  .place__paragraph {
+    font-size: calc(16px + (18 - 16) * (100vw - 768px) / (1024 - 768));
+  }
+}
+
   @media screen and (max-width : 768px) {
     .place__paragraph {
-      font-family: Inter;
       font-size: 16px;
-      /*line-height: 26px;*/
-
     }
   }
 
-
-
-.cover {
+  .cover {
   margin: 0;
   max-width: 1280px;
   width: 100%;
@@ -526,16 +459,6 @@
   .cover {
   padding-left: 0;
   padding-right: 0;
-
-  }
-}
-@media screen and (max-width : 768px) {
-  .cover {
-
-  }
-}
-@media screen and (max-width : 320px) {
-  .cover {
   }
 }
 
@@ -547,7 +470,6 @@
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center center;
-    /*border: 1px solid red;*/
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -586,7 +508,6 @@
   position: absolute;
   width: 100%;
   height: 100%;
-
   transition: opacity 300ms ease-in-out;
 }
 
@@ -600,7 +521,7 @@
   color: #FFF;
   min-height: 152px;
   max-width: 560px;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 72px;
   font-weight: 900;
   line-height: 109%;
@@ -620,7 +541,6 @@
   min-height: 70px;
   max-width: 288px;
   font-size: 32px;
-  /*line-height: 35px;*/
   margin: 0 0 16px 0;
   }
 }
@@ -630,10 +550,10 @@
   color: #FFF;
   min-height: 66px;
   max-width: 360px;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 18px;
   font-weight: 400;
-  line-height: 114%;
+  line-height: 122%;
   text-align: center;
   z-index: 2;
 }
@@ -647,9 +567,9 @@
 @media screen and (max-width : 320px) {
   .cover__subtitle {
     font-size: 14px;
-    /*line-height: 16px;*/
     min-height: 48px;
     max-width: 288px;
+    line-height: 114%;
   }
 }
 
@@ -664,7 +584,6 @@
   box-sizing: border-box;
   padding-top: 92px;
   padding-bottom: 24px;
-
 }
 
 @media screen and (max-width : 768px) {
@@ -674,15 +593,12 @@
 }
 @media screen and (max-width : 320px) {
   .footer {
-
     padding-top: 64px;
     max-width: 320px;
     display: grid;
     row-gap: 48px;
-
   }
 }
-
 
 .footer__menu {
   list-style-type: none;
@@ -691,30 +607,31 @@
   gap: 19px;
   margin: 0;
   padding: 0;
-  color: #FFF;
+   }
 
+@media screen and (max-width : 320px) {
+  .footer__menu {
+    display: grid;
+    row-gap: 32px;
   }
-
-  @media screen and (max-width : 320px) {
-    .footer__menu {
-      display: grid;
-      row-gap: 32px;
-    }
-  }
-
+}
 
 .footer__link {
-
-  text-decoration: none;
   min-height: 18px;
   max-width: 50px;
   margin: 0;
   color: #FFF;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 112%;
   text-align: left;
+}
+
+@media screen and (max-width : 768px) {
+  .footer__link {
+    font-size: calc(24px + (16 - 24) * (100vw - 320px) / (768 - 320));
+  }
 }
 
 @media screen and (max-width : 320px){
@@ -724,14 +641,11 @@
   }
 }
 
-
-
-
 .footer__copyright {
   margin: 0;
   min-height: 16px;
   min-width: 186px;
-  font-family: Inter;
+  font-family: Inter, Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 114%;
@@ -746,10 +660,7 @@
   }
 }
 
-.none
-{
-display: none;
-}
+
 
 
 .indent {
@@ -779,15 +690,11 @@ display: none;
 }
 
 
-@media screen and (max-width: 1280px) {
-
+.link {
+  text-decoration: none;
 }
-@media screen and (max-width : 1024px) {
 
-}
-@media screen and (max-width : 768px) {
-
-}
-@media screen and (max-width : 320px) {
-
+.link:hover {
+  opacity: 0.8;
+  transition: 1s;
 }
