--- a/pages/index1.css
+++ b/pages/index1.css
@@ -132,48 +132,65 @@
 
 .photo-grid {
   margin: 0;
-  display: grid;
   max-width: 1280px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+
+.photo-grid__items {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
   width: 100%;
   grid-template-columns: repeat(4, minmax(auto, 1fr));
   gap: 16px;
   box-sizing: border-box;
+  max-width: 1280px;
 }
 
 @media screen and (max-width: 1280px) {
-  .photo-grid {
+  .photo-grid__items {
      gap: calc(14px + (16 - 14) * (100vw - 1024px) / (1280 - 1024));
   }
 }
 
 @media screen and (max-width: 1024px) {
-  .photo-grid {
+  .photo-grid__items {
     grid-template-columns: repeat(3, minmax(auto, 1fr));
     gap: calc(16px + (14 - 16) * (100vw - 768px) / (1024 - 768));
   }
 }
 
 @media screen and (max-width : 768px) {
-  .photo-grid {
+  .photo-grid__items {
     grid-template-columns: repeat(2, minmax(auto, 1fr));
     gap: calc(12px + (16 - 12) * (100vw - 320px) / (768 - 320));
   }
 }
 
 @media screen and (max-width : 320px) {
-  .photo-grid {
+  .photo-grid__items {
     grid-template-columns:  minmax(auto, 1fr);
     gap: 12px;
     min-width: 288px;
   }
 }
 
-.photo-grid__item {
-  /*border: 1px solid red;*/
-  width: 100%;
-  object-fit: cover;
-  margin: 0;
+
+.photo-grid__it {
+
 }
+
+
+.photo-grid__item {
+  width: 100%;
+  /*object-fit: cover;*/
+    margin: 0;
+    display: block;
+}
+
 
 .plases {
   padding: 92px 148px 92px 148px;
@@ -324,14 +341,14 @@
   .plase__title {
     font-size: 42px;
     line-height: 109%;
-    padding-left: 10px;
+    padding-right: 10px;
   }
 }
 @media screen and (max-width : 320px) {
 .plase__title {
   font-size: 32px;
-  padding-left: 16px;
   line-height: 110%;
+  padding-left: 16px;
   }
 }
 
@@ -457,12 +474,13 @@
 }
 @media screen and (max-width : 1024px) {
   .cover {
-  padding-left: 0;
-  padding-right: 0;
+ padding: 0;
   }
 }
 
 .cover__link {
+  margin: 0;
+  padding: 0;
   width: 100%;
   min-width: 320px;
   min-height: 740px;
@@ -518,7 +536,7 @@
 
 .cover__title {
   margin: 0 0 32px 0;
-  color: #FFF;
+  color: #cc1818;
   min-height: 152px;
   max-width: 560px;
   font-family: Inter, Arial, sans-serif;
@@ -547,7 +565,8 @@
 
 .cover__subtitle {
   margin: 0;
-  color: #FFF;
+  padding: 0;
+  color: #d30b0b;
   min-height: 66px;
   max-width: 360px;
   font-family: Inter, Arial, sans-serif;
@@ -567,8 +586,8 @@
 @media screen and (max-width : 320px) {
   .cover__subtitle {
     font-size: 14px;
-    min-height: 48px;
     max-width: 288px;
+    min-height: 48px;
     line-height: 114%;
   }
 }
