--- a/pages/index.css
+++ b/pages/index.css
@@ -13,7 +13,25 @@
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/indent/indent.css);
-
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__list-item/intro__list-item.css);
+@import url(../blocks/intro/__list-large/intro__list-large.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/photo-grid/__items/photo-grid__items.css);
+@import url(../blocks/plases/__container/plases__container.css);
+@import url(../blocks/plases/plases.css);
+@import url(../blocks/plase/plase.css);
+@import url(../blocks/plase/__image/plase__image.css);
+@import url(../blocks/plase/__link/place__link.css);
+@import url(../blocks/plase/__paragraph/place__paragraph.css);
+@import url(../blocks/plase/__paragraphs/place__paragraphs.css);
+@import url(../blocks/plase/__title/plase__title.css);
+@import url(../blocks/plase/__url-heading/place__url-heading.css);
+@import url(../blocks/plase/__website/plase__website.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__link/cover__link.css);
 @import url(../blocks/cover/__title/cover__title.css);
@@ -22,4 +40,3 @@
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__menu/footer__menu.css);
-
