--- a/blocks/plase/__link/place__link.css
+++ b/blocks/plase/__link/place__link.css
@@ -8,10 +8,5 @@
   font-weight: 400;
   line-height: 122%;
   text-align: left;
+  border-bottom: 2px solid #FFF;
 }
-
-.place__link:hover {
-  opacity: 0.8;
-  transition: 1s;
-}
-
