--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,7 +1,8 @@
 .intro__list {
+  color: #FFF;
+  font-family: Inter, Arial, sans-serif;
   margin: 0;
   padding: 0;
-  color: #FFF;
   list-style-type: none;
   min-height: 90px;
   max-width: 690px;
