--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,9 +1,10 @@
 .intro {
   min-height: 429px;
-  max-width: 100%;
+  width: 100%;
+  max-width: 1280px;
   display: flex;
   flex-direction: column;
-  align-items:flex-start;
+  align-items: flex-start;
   margin: 0;
   padding: 92px 442px 92px 148px;
   box-sizing: border-box;
