--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,7 @@
 .lead__subtitle {
   margin: 0 0 64px 0;
   min-height: 72px;
+  width: 100%;
   max-width: 640px;
   font-size: 30px;
   font-weight: 400;
