--- a/blocks/plase/__link/plase__link.css
+++ b/blocks/plase/__link/plase__link.css
@@ -1,7 +1,7 @@
 .plase__link {
   margin: 0;
   color: #FFF;
-  min-height: 22px;
+  max-height: 22px;
   max-width: 456px;
   font-family: Inter, Arial, sans-serif;
   font-size: 18px;
