--- a/blocks/plase/__website/plase__website.css
+++ b/blocks/plase/__website/plase__website.css
@@ -6,9 +6,9 @@
   align-items:flex-start;
   align-self: flex-end;
   margin: 0;
-  min-height: 46px;
+  max-height: 46px;
   box-sizing: border-box;
-}
+ }
 
 @media screen and (max-width: 320px) {
   .plase__website {
